# Particle-Physics-Classifier

./: .gitignore  Makefile  README.md  conftest.py  particle_physics_classifier_implementation_plan.md  pyproject.toml
configs/: mlp_default.yaml  system.yaml
data/schemas/: higgs_schema.json
data/scripts/: download_higgs.py
notebooks/: training_colab.ipynb
src/: __init__.py
src/evaluation/: __init__.py  evaluation_pipeline.py
src/experiment_tracking/: __init__.py  experiment_registry.py  mlflow_logger.py
src/explainability/: __init__.py  attention_viz.py  lime_explainer.py  physics_interpretability.py  shap_explainer.py
src/features/: __init__.py  feature_store.py  high_level_features.py  jet_substructure.py  low_level_features.py  physics_features.py
src/ingestion/: __init__.py  data_validator.py  etl_pipeline.py  higgs_reader.py  root_reader.py
src/models/: __init__.py  base_model.py
src/models/bdt/: __init__.py  config.py  model.py
src/models/gnn/: __init__.py  config.py  model.py  trainer.py
src/models/mlp/: __init__.py  config.py  model.py  optimizer.py  trainer.py
src/models/normalizing_flow/: __init__.py  config.py  model.py  trainer.py
src/models/transformer/: __init__.py  config.py  model.py  trainer.py
src/pipeline/: __init__.py  training_pipeline.py
src/serving/api/: main.py  schemas.py
src/serving/api/routes/: explain.py  health.py  predict.py
src/utils/: __init__.py  device_utils.py  logging_config.py
tests/data/: sample_events.csv
tests/integration/: test_pipeline.py
tests/unit/: test_bdt.py  test_evaluation.py  test_explainability.py  test_features.py  test_gnn.py  test_metrics.py  test_models.py  test_normalizing_flow.py  test_optimizer.py  test_transformer.py
