[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "particle-physics-classifier"
version = "0.1.0"
description = "Production-grade ML platform for particle physics event classification on CERN collision data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rayya" }]
license = { text = "MIT" }

dependencies = [
    # Core data
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",          # parquet I/O
    "scipy>=1.11",
    "scikit-learn>=1.3",

    # HIGGS data download
    "requests>=2.31",
    "tqdm>=4.66",

    # ROOT file reading
    "uproot>=5.1",
    "awkward>=2.5",

    # Data validation
    "pandera>=0.18",

    # Feature & config
    "omegaconf>=2.3",
    "pydantic>=2.5",

    # Experiment tracking
    "mlflow>=2.9",

    # Deep learning
    "torch>=2.1",
    "torchvision>=0.16",

    # Hyperparameter optimisation (Module 3b)
    "optuna>=3.5",
    "optuna-integration>=3.5",
    "PyYAML>=6.0",

    # Logging
    "structlog>=23.2",
    "rich>=13.7",

    # Explainability (Phase 3, but importable now)
    "shap>=0.43",
]

[project.optional-dependencies]
gnn = [
    "torch-geometric>=2.4",
    "torch-scatter",
    "torch-sparse",
]
bdt = [
    "xgboost>=2.0",
    "lightgbm>=4.2",
    "optuna>=3.5",
]
serve = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "slowapi>=0.1.9",
]
monitoring = [
    "evidently>=0.4",
    "prometheus-client>=0.19",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "black>=24.1",
    "ipykernel>=6.28",
]
all = [
    "particle-physics-classifier[gnn,bdt,serve,monitoring,dev]",
]

[project.scripts]
ppc-train   = "src.pipeline.training_pipeline:main"
ppc-serve   = "src.serving.api.main:start"
ppc-etl     = "src.ingestion.etl_pipeline:main"
ppc-hpo     = "src.models.mlp.optimizer:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
